--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,6 +1,5 @@
 html, body {
     background-image: url('/storage/img/golfWallpaper.jpg');
-
     -webkit-background-size: cover !important;
     -moz-background-size: cover !important;
     -o-background-size: cover !important;
@@ -15,7 +14,42 @@ html, body {
     margin: 0;
     background-attachment: fixed;
 }
+.dropDownButton{
+    color: rgb(255, 255, 255) !important;
+    background-color: rgb(67, 133, 188) !important;
+    border-top-color: rgb(75, 148, 210) !important;
+    border-right-color: rgb(75, 148, 210) !important;
+    border-bottom-color: rgb(75, 148, 210) !important;
+    border-left-color: rgb(75, 148, 210) !important;
+}
 
+.greyColor{
+    color: #6c757d
+}
+.btn-primary{
+    color:#fff !important;
+}
+
+.btn-danger{
+    color:#fff !important;
+}
+
+/* .navbar{
+  background:transparent;
+  background-image:none;
+  border-color:transparent;
+  box-shadow:none;
+} */
+/* .navbar-light .navbar-brand {
+    color:#fff;
+} */
+/* .navbar-light .navbar-toggler{
+    color:#fff;
+}
+
+.nav-item{
+    color:#fff;
+} */
 .flex-container {
   display: flex;
   height:100vh;
@@ -96,22 +130,32 @@ html, body {
 
 /* SCORECARD COLORS */
 .white-back {
+    background-image: linear-gradient(rgb(255, 255, 255), rgb(255,255,255));
     background-color: #fff;
     color: #636b6f;
 }
 
 .blue-back {
-    background-image: linear-gradient(rgb(53 98 147), rgb(135,206,235));
+    background-image: linear-gradient(rgb(53 98 147), rgb(135,206,235)) !important;
     color: #fff;
 }
 .green-back {
-      background-image: linear-gradient(rgb(70 102 88), rgb(143,188,143));
+      background-image: linear-gradient(rgb(70 102 88), rgb(143,188,143)) !important;
       color: white;
 }
 
 .red-back {
-      background-image: linear-gradient(rgb(168 63 62)40%, rgb(240,128,128));
+      background-image: linear-gradient(rgb(168 63 62)40%, rgb(240,128,128)) !important;
       color: white;
+}
+
+.green-back input {
+    color: #636b6f;
+}
+
+
+.red-back input {
+    color: #636b6f;
 }
 
 .black-back {
@@ -129,10 +173,11 @@ html, body {
     background-image: linear-gradient(rgb(255,215,0), rgb(240,230,140));
 }
 
-.grey {
+.grey-back {
     background-color: #f2f2f2;
-    background-image: linear-gradient(rgb(220,220,220), rgb(255,255,255));
-    color: #636b6f;
+    /* background-image: linear-gradient(rgb(105,105,105), rgb(220,220,220)); */
+    background:rgb(150,150,150);
+    color: #fff;
 }
 
 .greenColor{
@@ -143,6 +188,7 @@ html, body {
     text-align: center;
 }
 
+
 .right {
     text-align: right;
     font-size: 13px;
@@ -151,39 +197,51 @@ html, body {
 .left {
     text-align: left;
 }
-
+.cardHeader{
+    height: 75px;
+    padding: 30px 10px 10px 10px;
+}
  #golfcard th, tr {
-  /* padding-top: 12px; */
-  /* padding-bottom: 12px; */
-  padding: 0px 12px;
-  height: 40px;
-  margin: 0px;
+    /* padding-top: 12px; */
+    /* padding-bottom: 12px; */
+    padding: 0px 12px;
+    height: 40px;
+    margin: 0px;
 }
 
 /* golf card styles */
 #golfcard {
     margin-left:auto;
-margin-right:auto;
-  width: 700px;
-  table-layout: fixed;
-  border-collapse: collapse;
+    margin-right:auto;
+    width: 700px;
+    table-layout: fixed;
+    border-collapse: collapse;
 }
 
 #golfcard td, #golfcard th {
   border: 1px solid #000;
   text-align: center;
-}
 
+}
+.courseName {
+    font-size: 40px;
+    text-align: left;
+    font-family: 'Nunito', sans-serif;
+    font-weight: 200;
+}
 #scoreField input {
     width:100%;
+    height:100%;
     font-family: 'Nunito', sans-serif;
-    font-weight: 600;
+    font-weight: 500;
     /* box-sizing:border-box; */
     /* -moz-box-sizing:border-box; */
     margin: 0px;
     padding: 0px;
 }
-
+#scoreField td{
+    padding:0px;
+}
 /* input[type="checkbox"] {
   transform:scale(1.5, 1.5);
 } */
@@ -322,12 +380,12 @@ cursor: pointer;
     border-radius: 5px;
     color: #636b6f;
     font-family: 'Nunito', sans-serif;
-    font-weight: 900;
 
 }
 
 #dayTable td, th {
     min-width: 100px;
+    font-weight: 200;
     /* color: rgb(53 98 147);
     text-align: center !important; */
     border: 1px solid #636b6f;
@@ -336,25 +394,44 @@ cursor: pointer;
 }
 
 tr:nth-child(even) {
-    background-color: #E8E8E8;
+            background-image: linear-gradient(rgb(220,220,220), rgb(255,255,255));
+            background-color: #000;
+
 }
 tr:nth-child(odd) {
-    background-color: #fff;
+        background-image: linear-gradient(rgb(220,220,220), rgb(255,255,255));
 }
+
 
 .dayBoxHeader{
     font-size: 25px;
     text-align: left;
     margin:10px;
-    padding:15px 15px 5px 15px;;
+    padding:15px 15px 5px 15px;
     /* background-color: red; */
 }
+.boxHeader{
+    font-size: 25px;
+    text-align: left;
+    /* font-weight: 500; */
+    line-height: 1.1;
+}
+.boyOverAvg{
+    font-size:16px;
+    padding-left:15px;
+}
+
+.bottomBtn{
+    position: absolute;
+    bottom:   0;
+}
 .nameClick{
-    color: #0000aa;
+    color: #000000;
     margin-bottom: 0;
 }
 .nameClick:hover{
     cursor: pointer;
+    color:green;
 }
 
 .formTextFieldDiv{
@@ -363,4 +440,34 @@ tr:nth-child(odd) {
 
 .statsFirstCol{
     text-align: right;
+}
+
+.dropdown-menu{
+    background-image: linear-gradient(rgb(70 102 88), rgb(143,188,143));
+    color: #fff;
+
+}
+.dropdown-menu>li>a {
+    color: #fff !important;
+}
+.dropdown-menu>li>a:hover{
+    background-image: linear-gradient(rgb(143,188,143),rgb(70 102 88));
+}
+
+
+.dropdown-menu>li>a {
+    color: #fff !important;
+}
+.dropdown-menu>li>a:hover{
+    background-image: linear-gradient(rgb(143,188,143),rgb(70 102 88));
+}
+
+.clickRound{
+    color: #000000 !important;
+    margin-bottom: 0 !important;
+
+}
+.clickRound:hover{
+    cursor: pointer !important;
+    color:green !important;
 }
